# fastpsl

./: Cargo.toml  LICENSE  README.md  fastpsl.pyi  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
src/core/: error.rs  file.rs  mod.rs  parse.rs
test/: benchmark.py
