[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "fastpsl"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
maintainers = [{ name = "ssrtw", email = "pixar9899@gmail.com" }]
urls = { homepage = "https://github.com/ssrtw/fastpsl/" }

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.isort]
line_length = 120

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "rust/Cargo.toml" },
    { file = "**/*.rs" },
]

[dependency-groups]
dev = ["tldextract>=5.1.2", "maturin[patchelf]>=1.9.1"]
